# buffer-cplusplus

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml  semgrep.yml
doc/html/: Buffer_8h.html  Buffer_8h_source.html  annotated.html  classBuffer-members.html  classBuffer.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html
doc/html/search/: all_62.html  all_73.html  classes_62.html  files_62.html  functions_62.html  functions_67.html  functions_73.html  functions_7e.html  search.js  variables_62.html  variables_70.html  variables_73.html
doc/latex/: Buffer_8h.tex  annotated.tex  classBuffer.tex  doxygen.sty  files.tex  refman.tex
examples/ex1/: CMakeLists.txt  Makefile  main.cpp
examples/ex2/: CMakeLists.txt  Makefile  main.cpp
examples/ex3/: CMakeLists.txt  Makefile  main.cpp
src/: Buffer.cpp  Buffer.h  CMakeLists.txt  Doxyfile  Makefile
test/: CMakeLists.txt  test.cpp
